/**
 * The Order Shipping service for shipping packages.
 */
syntax = "proto3";
option java_multiple_files = true;
package cdx.opencdx.grpc.shipping;
import "common.proto";
import "inventory.proto";
import "order.proto";
import "google/protobuf/timestamp.proto";

/**
 * The ShippingRequest message is used to request shipping options for a package.
 */
message ShippingRequest {
  /**
   * The address of the sender.
   */
  cdx.opencdx.grpc.common.Address sender_address = 1;
  /**
   * The name to ship the package to.
   */
  cdx.opencdx.grpc.common.FullName shipping_name = 2;
  /**
   * The address of the recipient.
   */
  cdx.opencdx.grpc.common.Address recipient_address = 3;
  /**
   * The package details.
   */
  cdx.opencdx.grpc.shipping.Order package_details = 4;
  /**
   * The service level requested.
   */
  bool require_signature = 5;
  /**
   * The declared value of the package.
   */
  double declared_value = 6;
}

/**
 * The Shipping message is used to ship a package.
 */
message Shipping {

  /**
   * The shipping id.
   */
  optional string id = 1;
  /**
   * The name to ship the package to.
   */
  cdx.opencdx.grpc.common.FullName shipping_name = 2;
  /**
   * The address of the sender.
   */
  cdx.opencdx.grpc.common.Address sender_address = 3;
  /**
   * The address of the recipient.
   */
  cdx.opencdx.grpc.common.Address recipient_address = 4;
  /**
   * The package details.
   */
  cdx.opencdx.grpc.shipping.Order package_details = 5;
  /**
   * The service level requested.
   */
  ServiceLevel service_level = 6;
  /**
   * The additional services requested.
   */
  repeated AdditionalService additional_services = 7;
  /**
   * The payment details.
   */
  bool require_signature = 8;
  /**
   * The declared value of the package.
   */
  double declared_value = 9;
  /**
   * The shipping vendor id.
   */
  string shipping_vendor_id = 10;

  /**
   * The shipping cost.
   */
  double shipping_cost = 11;
  /**
   * The payment details.
   */
  cdx.opencdx.grpc.common.PaymentDetails payment_details = 12;
}

/**
 * The ShippingResponse message is used to return the shipping details.
 */
message ShippingResponse {
  /**
   * The tracking number.
   */
  string tracking_number = 1;
  /**
   * The shipping status.
   */
  cdx.opencdx.grpc.common.ShippingStatus status = 2;
  /**
   * The estimated delivery date.
   */
  google.protobuf.Timestamp estimated_delivery_date = 3;
  /**
   * The shipping cost.
   */
  double total_cost = 4;

}

/**
 * The AdditionalService message is used to define additional services.
 */
message AdditionalService {
  /**
   * The additional service code.
   */
  string code = 1;
  /**
   * The additional service short description.
   */
  string short_description = 2;
  /**
   * The additional service long description.
   */
  string long_description = 3;
}

/**
 * The ServiceLevel message is used to define the service level.
 */
message ServiceLevel {
  /**
   * The service level code.
   */
  string code = 1;
  /**
   * The service level short description.
   */
  string short_description = 2;
  /**
   * The service level long description.
   */
  string long_description = 3;
}

/**
 * The ShippingVendorResponse message is used to return the shipping vendors.
 */
message ShippingVendorResponse {
  /**
   * The shipping vendors.
   */
  repeated Shipping options = 1;
}

/*
 * This protobuf message represents the entities involved in a Delivery Tracking System. It includes various fields that
 * provide information about an ongoing or completed delivery.
 *
 * The 'DeliveryTracking' is a message which represents a specific delivery and stores the details related to it.
 */
message DeliveryTracking {
  /*
   * Uniquely identifies a delivery instance.
   */
  optional string tracking_id = 1;

  /*
   * This field is used to link the delivery to a particular order.
   */
  optional string order_id = 2;

  /*
   * Stores the current status of the delivery.
   */
  optional cdx.opencdx.grpc.common.ShippingStatus status = 3;

  /*
   * The timestamp representing when the delivery process was commenced.
   */
  google.protobuf.Timestamp start_datetime = 4;

  /*
   * The timestamp indicating when the delivery reached its destination.
   */
  google.protobuf.Timestamp end_datetime = 5;

  /*
   * Information about the current whereabouts of the delivery.
   */
  optional string current_location = 6;

  /*
   * Contains information about the person who is supposed to receive the delivery.
   */
  optional string recipient = 7;

  /*
   * Here all the details related to the items included in the delivery are stored.
   */
  repeated string delivery_items = 8;

  /*
   * The courier person who has been responsible for the delivery is identified by this field.
   */
  optional string assigned_courier = 9;
}

/*
 * The DeliveryTrackingRequest message defining the request format for a Delivery Tracking entity.
 */
message DeliveryTrackingRequest {
  /*
   * Delivery tracking details
   */
  DeliveryTracking delivery_tracking = 1;
}

/*
 * The DeliveryTrackingResponse message states the response format from the Delivery Tracking operation.
 * 'delivery_tracking' holds the created delivery tracking details.
 */
message DeliveryTrackingResponse {
  /*
   * Created delivery tracking data
   */
  DeliveryTracking delivery_tracking = 1;
}

/**
 * The ShippingService service definition.
 */
service ShippingService {
  /**
   * The GetShippingVendors method is used to get the shipping vendors.
   */
  rpc GetShippingVendors(ShippingRequest) returns (ShippingVendorResponse);
  /**
   * The ShipPackage method is used to ship a package.
   */
  rpc ShipPackage(Shipping) returns (ShippingResponse);
  /*
   * RPC service for creating a new entity to track medication delivery.
   */
  rpc CreateDeliveryTracking(DeliveryTrackingRequest) returns (DeliveryTrackingResponse);
  /*
   * RPC service for retrieving information about a specific medication delivery tracking entity.
   */
  rpc GetDeliveryTracking(DeliveryTrackingRequest) returns (DeliveryTrackingResponse);

}

